--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DB_NAME=<name of database>
 DB_PORT=<port of database>
 
 PORT=<port of project>
+
+JWT_SECRET_KEY=<secret key of jwt (random string)>
