--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migration:revert": "npm run typeorm -- -d ./src/config/data-source.config.ts migration:revert"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.3",
@@ -36,6 +37,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "mssql": "^9.1.1",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.14"
@@ -47,6 +49,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
