refactor: store information about email to .env

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_PORT=<port of database>
 PORT=<port of project>
 
 JWT_SECRET_KEY=<secret key of jwt (random string)>
+
+EMAIL_HOST=<host of SMTP service>
+EMAIL_ADDRESS=<your email address>
+EMAIL_PASSWORD=<password of email address>
