--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "migration:revert": "npm run typeorm -- -d ./src/config/data-source.config.ts migration:revert"
   },
   "dependencies": {
+    "@apollo/server": "^4.6.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^11.0.5",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
@@ -36,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "mssql": "^9.1.1",
     "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
